<resources>
    <string name="app_name">MaddarTask</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_name">User Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="maddar_message">"Welcome in MaddarSoft "</string>
    <string name="save">Save</string>


    <string-array name="gender">
        <item>Male</item>
        <item>FeMale</item>
    </string-array>
</resources>